Refactor code structure for improved readability and maintainability

--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,13 @@
 
 ## Dependencies
 node_modules/
-package-lock.json
 
 ## Build
 dist/
 
 ## Raycast
 raycast-env.d.ts
+assets/*.png
+!.gitignore
 
 
